--- a/public/404.html
+++ b/public/404.html
@@ -1,22 +1,71 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>cuSpark</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Page Not Found - CuSpark Ideathon</title>
+    <meta name="description" content="The page you're looking for doesn't exist. Visit CuSpark Ideathon homepage for competition details.">
+    <meta name="robots" content="noindex, nofollow">
+    <link rel="canonical" href="https://cuspark.live/">
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        text-align: center;
+        padding: 50px;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        color: white;
+        margin: 0;
+        min-height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+      }
+      .container {
+        max-width: 600px;
+      }
+      h1 { font-size: 3em; margin-bottom: 20px; }
+      p { font-size: 1.2em; margin-bottom: 30px; }
+      .btn {
+        background: rgba(255,255,255,0.2);
+        color: white;
+        padding: 12px 30px;
+        text-decoration: none;
+        border-radius: 25px;
+        border: 2px solid white;
+        display: inline-block;
+        transition: all 0.3s ease;
+      }
+      .btn:hover {
+        background: white;
+        color: #667eea;
+      }
+    </style>
+    
+    <!-- SPA GitHub Pages redirect script -->
     <script type="text/javascript">
       var pathSegmentsToKeep = 0;
-
       var l = window.location;
-      l.replace(
-        l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-        l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
-        l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
-        (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
-        l.hash
-      );
-
+      
+      // Only redirect if it's a client-side route, not a real 404
+      if (l.pathname !== '/404.html') {
+        l.replace(
+          l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
+          l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
+          l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
+          (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
+          l.hash
+        );
+      }
     </script>
   </head>
   <body>
+    <div class="container">
+      <h1>404</h1>
+      <h2>Page Not Found</h2>
+      <p>The page you're looking for doesn't exist or has been moved.</p>
+      <p>Let's get you back to the CuSpark Ideathon!</p>
+      <a href="https://cuspark.live/" class="btn">Go Home</a>
+    </div>
   </body>
 </html>
